--- a/templates/panelpage.html
+++ b/templates/panelpage.html
@@ -136,6 +136,14 @@
         </form>
     </div>
 
+    <div class="PanelWrapper" id="BatchActivity">
+        <h2 class="PanelCategory">Batch Activity</h2>
+        <form method="post" action="/postbatchactivity">
+            <textarea name="activities"></textarea><br>
+            <input type="submit">
+        </form>
+    </div>
+
     <div class="PanelWrapper" id="BatchTimedActivity">
         <h2 class="PanelCategory">Batch Timed Activity</h2>
         <form method="post" action="/postbatchtimedactivity">
