--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -8,7 +8,10 @@ textarea {
     font-family: Helvetica, Verdana, Arial, sans-serif;
     font-size: 10pt;
 }
-
+div#UserPhoto {
+    height: 150;
+    margin: 2px;
+}
 div.Sub_BlockWrapper {
     border: 1px dashed green;
     padding: 5px;
