--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -4,26 +4,11 @@
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 {% if coffee_stats -%}
 {% set daily_cups = coffee_stats['daily_cups'] -%}
-<script type="text/javascript">
-    google.load('visualization','1', {packages:['corechart']});
-    google.setOnLoadCallback(drawChart)
-    function drawChart() {
-        var data = new google.visualization.DataTable();
-        data.addColumn('number', 'days ago');
-        data.addColumn('number', 'cups');
-        {% for cup in daily_cups -%}
-        data.addRow([{{0 - (loop.length - 1 -loop.index0)}}, {{cup}}]);
-        {% endfor %}
-        var options = {'width': 500,
-                       'height': 400,
-                       'lineWidth': 1,
-                       hAxis: {format: '##', title: 'Days ago'},
-                       vAxis: {format: '##', title: 'Cups'}};
+{% include 'js_coffee_chart.html' %}
+{% endif %}
 
-        var chart = new google.visualization.ScatterChart(document.getElementById('coffee_chart'));
-        chart.draw(data, options);
-    }
-</script>
+{% if sleep_stats -%}
+{% include 'js_sleep_chart.html' %}
 {% endif %}
 {% endblock %}
 
@@ -31,6 +16,9 @@
 <div class="BlockWrapper" id="PersonalInfo">
     <h2>Too much information on</h2>
     <h1>{{user.salutation}} {{user.realname}}</h1>
+    <div id="UserPhoto">
+        <img src="../img?img_key={{user.key()}}"></img>
+    </div>
     <p>Last seen on {{(user.last_seen + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y, %H:%M')}} UTC {{'%+2.1f' % user.timezone}}</p>
     {% set user_messages = stats.user_messages(user, 1) -%}
     {% if user_messages -%}
