--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,8 +9,21 @@ textarea {
     font-size: 10pt;
 }
 div#UserPhoto {
-    height: 150;
+    border: 1px dashed blue;
+    height: auto;
+    width: auto;
     margin: 2px;
+    padding: 2px;
+    float: left;
+}
+
+div#UserInfo {
+    margin: 10px 10px 10px 10px;
+    padding: 10px;
+}
+
+div#UserPhoto img {
+    border: 1px dashed blue;
 }
 div.Sub_BlockWrapper {
     border: 1px dashed green;
@@ -20,8 +33,10 @@ div.Sub_BlockWrapper {
 
 div.BlockWrapper {
     border: 1px dashed red;
+    width: auto;
     padding: 10px;
     margin: 5px;
+    display: absolute;
 }
 
 div.PanelWrapper {
