--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -19,14 +19,16 @@
     <h2>Too much information on</h2>
     <h1>{{user.salutation}} {{user.realname}}</h1>
     <div id="UserPhoto">
-        <img src="../img?img_key={{user.key()}}"></img>
+        <img src="../img?img_key={{user.photo_key}}"></img>
     </div>
-    <p>Last seen on {{(user.last_seen + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y, %H:%M')}} UTC {{'%+2.1f' % user.timezone}}</p>
-    {% set user_messages = stats.user_messages(user, 1) -%}
-    {% if user_messages -%}
-        <h3>Latest message from {{user.salutation}} {{user.realname}}</h3>
-        <p class="UserMessage">{{user_messages[0].message}}</p>
-    {% endif -%}
+    <div id="UserInfo">
+        <p>Last seen on {{(user.last_seen + datetime.timedelta(hours = user.timezone)).strftime('%d/%m/%Y, %H:%M')}} UTC {{'%+2.1f' % user.timezone}}</p>
+        {% set user_messages = stats.user_messages(user, 1) -%}
+        {% if user_messages -%}
+            <h3>Latest message from {{user.salutation}} {{user.realname}}</h3>
+            <p class="UserMessage">{{user_messages[0].message}}</p>
+        {% endif -%}
+    </div>
 </div>
 
 <div class="BlockWrapper" id="Energy">
