--- a/templates/userpage.html
+++ b/templates/userpage.html
@@ -80,27 +80,16 @@
 
 <div class="BlockWrapper" id="Hygiene">
     <h2>Hygiene</h2>
-    {% set shower_status = stats.activity_status(user, 'shower', 1) %}
-    {% set shave_status = stats.activity_status(user, 'shave', 1) %}
-    {% set haircut_status = stats.activity_status(user, 'cut hair', 1) %}
-    {% set shower_interval = stats.average_time_between_activities(user, 'shower') / (60.0 * 60.0) %}
-    {% set shave_interval = stats.average_time_between_activities(user, 'shave') / (60.0 * 60.0 * 24.0) %}
-    {% set haircut_interval = stats.average_time_between_activities(user, 'cut hair') / (60.0 * 60.0 * 24.0) %}
-    
-    {% if shower_status['timelatest'] %}
-        <p>{{user.salutation}} {{user.realname}} last showered {{'%2.2f' % (shower_status['timesince'] / (60.0 * 60.0))}} hours ago, {{user.nom_pronoun}} usually showers every {{'%2.2f' % shower_interval}} hours</p>
-    {% else %}
-        <p>{{user.salutation}} {{user.realname}} has not recorded to have showered yet. We can only hope that {{user.salutation}} {{user.realname}} is not stinky</p>
-    {% endif %}
-    {% if shave_status['timelatest'] %}
-        <p>{{user.salutation}} {{user.realname}} last shaved {{'%2.2f' % (shave_status['timesince'] / (60.0 * 60.0 * 24))}} day(s) ago, {{user.nom_pronoun}} usually shaves every {{'%1.2f' % shave_interval}} days</p>
-    {% else %}
-        <p>{{user.salutation}} {{user.realname}} has not recorded to have shaved yet. Perhaps {{user.salutation}} {{user.realname}} is trying to grow a manscape?</p>
-    {% endif %}
-    {% if haircut_status['timelatest'] %}
-        <p>{{user.salutation}} {{user.realname}} last got a haircut {{'%2.2f' % (haircut_status['timesince'] / (60.0 * 60.0 * 24))}} day(s) ago, {{user.nom_pronoun}} usually gets a haircut every {{'%1.2f' % haircut_interval}} days</p>
-    {% else %}
-        <p>{{user.salutation}} {{user.realname}} has not recorded any haircut yet. Perhaps {{user.salutation}} {{user.realname}} is trying to grow beautiful long locks?</p>
+    {% if hygiene_stats -%}
+        {% if hygiene_stats['shower'] %}
+            <p>{{user.salutation}} {{user.realname}} last showered {{'%2.2f' % hygiene_stats['shower']['latest']}} hours ago, {{user.nom_pronoun}} usually showers every {{'%2.2f' % hygiene_stats['shower']['ave_interval']}} hours.</p>
+        {% else %}
+            <p>{{user.salutation}} {{user.realname}} has not recorded any shower! {{user.salutation}} {{user.realname}} is a stinko!</p>
+        {% endif %}
+        
+        <p>{{user.salutation}} {{user.realname}} last shaved {{'%2.2f' % hygiene_stats['shave']['latest']}} days ago, {{user.nom_pronoun}} usually shaves every {{'%2.2f' % hygiene_stats['shave']['ave_interval']}} days.</p>
+        
+        <p>{{user.salutation}} {{user.realname}} last got a haircut {{'%2.2f' % hygiene_stats['haircut']['latest']}} days ago, {{user.nom_pronoun}} usually gets a haircut every {{'%2.2f' % hygiene_stats['haircut']['ave_interval']}} days.</p>    
     {% endif %}
 </div>
 
